Одновила сборку веб пака

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Starter Kit</title>
+    <title>Filmoteka</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <article class="intro">
-      <h1>Webpack starter kit</h1>
-
-      <!-- HTML image reference example. -->
-      <!-- <img src="./images/intro.png" alt="" width="640" /> -->
-      <script src="/src/index.js"></script>
-    </article>
+    <!-- <% require('html-loader!./partials/header.html').default %> -->
   </body>
 </html>
