--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- <% require('html-loader!./partials/header.html').default %> -->
+    <header id="header-main"></header>
+    <header id="header-library"></header>
+    <main>
+      <section id="movie-gallery" class="cards-movies"></section>
+      <div id="spiner-container"></div>
+    </main>
+    <footer id="footer"></footer>
+    <div id="modal-window"></div>
   </body>
 </html>
