Добавлена структура проекта

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,9 @@
 
   <body>
     <header id="header-main"></header>
-    <header id="header-library"></header>
-    <main>
-      <section id="movie-gallery" class="cards-movies"></section>
-      <div id="spiner-container"></div>
+    <main id="main">
+      <!-- <section id="movie-gallery" class="cards-movies">
+      </section> -->
     </main>
     <footer id="footer"></footer>
     <div id="modal-window"></div>
