Добавлен файл sass для работы со стилями FilmInfo

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,7 @@
 
   <body>
     <header id="header-main"></header>
-    <main id="main">
-      <!-- <section id="movie-gallery" class="cards-movies">
-      </section> -->
-    </main>
+    <main id="main"></main>
     <footer id="footer"></footer>
     <div id="modal-window"></div>
   </body>
