--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
   <body>
     <header id="header-main"></header>
 
-    <main id="main" class="cards-movies">
-    </main>
+    <main id="main" class="cards-movies"></main>
     <footer id="footer"></footer>
     <div id="modal-window"></div>
   </body>
